# routers/AdminRouter.ts
@@ -1,120 +1,89 @@
-import { Router } from 'express';
-import { body } from 'express-validator';
-import AdminController  from '../controllers/AdminController';
-import { authMiddleware }  from '../middleware/AuthMiddleware';
-import { roleMiddleware }  from '../middleware/RoleMiddleware';
-import { required } from '../middleware/ValdiationMiddlewares';
+import { Router } from "express";
+import { body } from "express-validator";
+import AdminController from "../controllers/AdminController";
+import { authMiddleware } from "../middleware/AuthMiddleware";
+import { roleMiddleware } from "../middleware/RoleMiddleware";
+import { required } from "../middleware/ValdiationMiddlewares";
 
 const router = Router();
 
 router.post(
-  '/login',
-  [
-    required('email'),
-    required('password'),
-  ],
+  "/login",
+  [required("email"), required("password")],
   AdminController.login
 );
 router.get(
-  '/roles',
+  "/roles",
   authMiddleware,
-  roleMiddleware(['ADMIN']),
+  roleMiddleware(["ADMIN"]),
   AdminController.getRoles
 );
 router.get(
-  '/posts',
+  "/posts",
   authMiddleware,
-  roleMiddleware(['ADMIN']),
+  roleMiddleware(["ADMIN"]),
   AdminController.getPosts
 );
 router.post(
-  '/users/create',
+  "/users/create",
   authMiddleware,
-  roleMiddleware(['ADMIN']),
+  roleMiddleware(["ADMIN"]),
   [
-    required('email').isEmail(),
-    required('password').isLength({ min: 4, max: 30 }),
-    required('firstName'),
-    required('lastName'),
+    required("email").isEmail(),
+    required("password").isLength({ min: 4, max: 30 }),
+    required("firstName"),
+    required("lastName"),
   ],
   AdminController.createUser
 );
 router.get(
-  '/users',
+  "/users",
   authMiddleware,
-  roleMiddleware(['ADMIN']),
+  roleMiddleware(["ADMIN"]),
   AdminController.getUsers
 );
 router.post(
-  '/tags/create',
+  "/roles/create",
   authMiddleware,
-  roleMiddleware(['ADMIN']),
-  [
-    required('value'),
-  ],
-  AdminController.createTag
-);
-router.post(
-  '/roles/create',
-  authMiddleware,
-  roleMiddleware(['ADMIN']),
-  [
-    required('value'),
-  ],
+  roleMiddleware(["ADMIN"]),
+  [required("value")],
   AdminController.createRole
 );
 router.delete(
-  '/tags/:id',
+  "/roles/:id",
   authMiddleware,
-  roleMiddleware(['ADMIN']),
-  AdminController.deleteTag
-);
-router.put(
-  '/tags/:id',
-  authMiddleware,
-  roleMiddleware(['ADMIN']),
-  [
-    required('value'),
-  ],
-  AdminController.updateTag
-);
-router.delete(
-  '/roles/:id',
-  authMiddleware,
-  roleMiddleware(['ADMIN']),
+  roleMiddleware(["ADMIN"]),
   AdminController.deleteRole
 );
 router.put(
-  '/roles/:id',
+  "/roles/:id",
   authMiddleware,
-  roleMiddleware(['ADMIN']),
-  [
-    required('value'),
-  ],
+  roleMiddleware(["ADMIN"]),
+  [required("value")],
   AdminController.updateRole
 );
 router.post(
-  '/users/ban/:id',
+  "/users/ban/:id",
   authMiddleware,
-  roleMiddleware(['ADMIN']),
+  roleMiddleware(["ADMIN"]),
   AdminController.banUser
 );
 router.post(
-  '/users/unban/:id',
+  "/users/unban/:id",
   authMiddleware,
-  roleMiddleware(['ADMIN']),
+  roleMiddleware(["ADMIN"]),
   AdminController.unbanUser
 );
 router.post(
-  '/posts/ban/:id',
+  "/posts/ban/:id",
   authMiddleware,
-  roleMiddleware(['ADMIN']),
+  roleMiddleware(["ADMIN"]),
   AdminController.banPost
 );
 router.post(
-  '/posts/unban/:id',
+  "/posts/unban/:id",
   authMiddleware,
-  roleMiddleware(['ADMIN']),
+  roleMiddleware(["ADMIN"]),
   AdminController.unbanPost
 );
 
